correct overlaps

--- a/css/style.css
+++ b/css/style.css
@@ -506,8 +506,8 @@ body {
 
 .fund-img {
   position: absolute;
-  width: 20%;
-  height: 60%;
+  width: 50px;
+  height: 50px;
   margin: 0;
   top: 20%;
   left: 4%;
@@ -694,6 +694,7 @@ body {
 
 .news {
   padding: 0 12px;
+  margin-bottom: 8%;
 }
 
 .news-header {
@@ -701,7 +702,7 @@ body {
   font-weight: bold;
   line-height: 1.1;
   font-family: sans-serif;
-  font-size: 25px;
+  font-size: 30px;
   margin-bottom: 7%;
   cursor: pointer;
   transition: 0.5s;
@@ -1135,7 +1136,7 @@ body {
 
   .funding {
     width: 95%;
-    margin-top: 20%;
+    margin-top: 37%;
   }
 
   .funding-main {
@@ -1319,8 +1320,8 @@ body {
   }
 
   .fund-img {
-    width: 11%;
-    height: 70%;
+    width: 50px;
+    height: 50px;
     top: 10%;
     left: 2%;
   }
